--- a/StudioConcept/MainWindow.xaml
+++ b/StudioConcept/MainWindow.xaml
@@ -4,32 +4,33 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mvvm="clr-namespace:StudioConcept.MVVM"
+        xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
         xmlns:action="clr-namespace:StudioConcept.ActionItem"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="1200">
     <Window.Resources>
         <DataTemplate DataType="{x:Type mvvm:BaseShape}">
-            <action:SequenceAction AllowDrop="True" >
-                <action:SequenceAction.Style>
-                    <Style TargetType="action:SequenceAction">
-                        <Setter Property="Canvas.Left" Value="{Binding X}"></Setter>
-                        <Setter Property="Canvas.Top" Value="{Binding Y}"></Setter>
-                    </Style>
-                </action:SequenceAction.Style>
-            </action:SequenceAction>
+            <Grid>
+                <action:SequenceAction AllowDrop="True" >
+                </action:SequenceAction>
+            </Grid>
         </DataTemplate>
     </Window.Resources>
-    <Window.DataContext>
-        <mvvm:MainWindowMVVM />
-    </Window.DataContext>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"></ColumnDefinition>
             <ColumnDefinition Width="7*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <ItemsControl ItemsSource="{Binding Shapes}">
+        <ItemsControl dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" ItemsSource="{Binding Shapes}">
         </ItemsControl>
-        <Canvas Grid.Column="1" Background="LightGray">
+        <Canvas x:Name="Canvas" Background="Aqua" dd:DragDrop.IsDropTarget="True" dd:DragDrop.DropHandler="{Binding}" Grid.Column="1">
+            <Grid Tag="2" MouseEnter="UIElement_OnMouseEnter">
+                <Path Data="m 0,4 A 4,4 0 0,1 4,0 H 12 c 2,0 3,1 4,2 l 4,4 c 1,1 2,2 4,2 h 12 c 2,0 3,-1 4,-2 l 4,-4 c 1,-1 2,-2 4,-2 H 322.5546875 a 4,4 0 0,1 4,4 v 40  a 4,4 0 0,1 -4,4 H 64 c -2,0 -3,1 -4,2 l -4,4 c -1,1 -2,2 -4,2 h -12 c -2,0 -3,-1 -4,-2 l -4,-4 c -1,-1 -2,-2 -4,-2 h -8  a 4,4 0 0,0 -4,4 v 80 a 4,4 0 0,0 4,4 h  8 c 2,0 3,1 4,2 l 4,4 c 1,1 2,2 4,2 h 12 c 2,0 3,-1 4,-2 l 4,-4 c 1,-1 2,-2 4,-2 H 322.5546875 a 4,4 0 0,1 4,4 v 24  a 4,4 0 0,1 -4,4 H 48   c -2,0 -3,1 -4,2 l -4,4 c -1,1 -2,2 -4,2 h -12 c -2,0 -3,-1 -4,-2 l -4,-4 c -1,-1 -2,-2 -4,-2 H 4 a 4,4 0 0,1 -4,-4 z" Fill="RoyalBlue"></Path>
+            </Grid>
+            <Grid Tag="1" Canvas.Top="55" Canvas.Left="22" MouseEnter="UIElement_OnMouseEnter">
+                <Path  Data="m 0,4 A 4,4 0 0,1 4,0 H 12 c 2,0 3,1 4,2 l 4,4 c 1,1 2,2 4,2 h 12 c 2,0 3,-1 4,-2 l 4,-4 c 1,-1 2,-2 4,-2 H 162.95306015014648 a 4,4 0 0,1 4,4 v 40  a 4,4 0 0,1 -4,4 H 48   c -2,0 -3,1 -4,2 l -4,4 c -1,1 -2,2 -4,2 h -12 c -2,0 -3,-1 -4,-2 l -4,-4 c -1,-1 -2,-2 -4,-2 H 4 a 4,4 0 0,1 -4,-4 z" Fill="RoyalBlue"></Path>
+            </Grid>
             
         </Canvas>
     </Grid>
