--- a/StudioConcept/App.xaml
+++ b/StudioConcept/App.xaml
@@ -79,6 +79,9 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style x:Key="ItemTemplate" TargetType="{x:Type ItemsPresenter}">
+            <Setter Property=""
+        </Style>
         <Style x:Key="TreeViewItemStyle1" TargetType="{x:Type TreeViewItem}">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
