--- a/StudioConcept/ListView.xaml
+++ b/StudioConcept/ListView.xaml
@@ -1,17 +1,14 @@
-﻿<Window x:Class="StudioConcept.SecondWindow"
+﻿<Window x:Class="StudioConcept.ListView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudioConcept"
-        xmlns:converter="clr-namespace:StudioConcept.Converter"
-        xmlns:tree="clr-namespace:StudioConcept.Tree"
-        xmlns:item="clr-namespace:StudioConcept.ActionItem"
         mc:Ignorable="d"
-        Title="SecondWindow" Height="450" Width="800">
+        Title="ListView" Height="450" Width="800">
     <Grid>
-        <TreeView ItemsSource="{Binding Shapes}" >
-            
-        </TreeView>
+       <ListView>
+           
+       </ListView> 
     </Grid>
 </Window>
