--- a/StudioConcept/App.xaml
+++ b/StudioConcept/App.xaml
@@ -1,10 +1,15 @@
-﻿<Application x:Class="StudioConcept.App"
+<Application x:Class="StudioConcept.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StudioConcept"
-             xmlns:cvt="clr-namespace:StudioConcept.Converter"
-             StartupUri="TreeView.xaml">
-    <Application.Resources>
-        <cvt:ColorToBrushConverter x:Key="stringToBrushConverter"/>
-    </Application.Resources>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:local="clr-namespace:StudioConcept" 
+             xmlns:cvt="clr-namespace:StudioConcept.Converter" 
+             StartupUri="MainWindow.xaml" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             d1p1:Ignorable="d" 
+             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+  <Application.Resources>
+    <ResourceDictionary>
+      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:StudioConcept.ViewModel" />
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
