--- a/StudioConcept/App.xaml
+++ b/StudioConcept/App.xaml
@@ -8,8 +8,13 @@
              d1p1:Ignorable="d" 
              xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Application.Resources>
-    <ResourceDictionary>
-      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:StudioConcept.ViewModel" />
-    </ResourceDictionary>
-  </Application.Resources>
+     <ResourceDictionary>
+       <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary >
+                    <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:StudioConcept.ViewModel" />
+                </ResourceDictionary>
+                <ResourceDictionary Source="Style/TreeViewStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+     </ResourceDictionary>
+   </Application.Resources>
 </Application>
